--- a/res/layout/weather_layout.xml
+++ b/res/layout/weather_layout.xml
@@ -14,11 +14,12 @@
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
-           android:background="@drawable/ic_launcher"
+           android:background="@drawable/home"
            />
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
+           android:layout_centerInParent="true"
            android:id="@+id/city_name"
            android:textColor="#fff"
            android:textSize="24sp"
@@ -30,7 +31,7 @@
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
-           android:background="@drawable/ic_launcher"
+           android:background="@drawable/refresh"
            />
    </RelativeLayout>
 	<RelativeLayout 
