--- a/res/drawable/whats_new_start_btn.xml
+++ b/res/drawable/whats_new_start_btn.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector
   xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true" android:drawable="@drawable/butten_pressed" />
-    <item android:drawable="@drawable/butten_unpress" />
+    <item android:state_selected="true" android:color="#ffffff" />
+    <item android:state_focused="true" android:color="#ffffff" />
+    <item android:state_pressed="true" android:color="#ffffff" />
+    <item android:color="#89683B" />
 </selector>
