--- a/res/layout/what_new_four.xml
+++ b/res/layout/what_new_four.xml
@@ -21,10 +21,10 @@
         android:layout_marginBottom="50dp"
         android:background="@drawable/whats_new_start_btn"
         android:focusable="true" />  -->
-    <TextView
+    <Button
         android:id="@+id/iv_start"
         android:text="@string/introduce"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:clickable="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
