--- a/res/layout/weather_layout.xml
+++ b/res/layout/weather_layout.xml
@@ -12,44 +12,53 @@
        android:layout_height="50dp"
        android:background="@drawable/background"
        >
-       <Button 
-           android:id="@+id/switch_city"
-           android:layout_width="45dp"
-           android:layout_height="45dp"
-           android:layout_centerVertical="true"
-           android:layout_marginLeft="10dp"
-           android:background="@drawable/title_city"
-           />
-       <TextView 
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_centerInParent="true"
-           android:id="@+id/city_name"
-           android:textColor="#fff"
-           android:textSize="24sp"
-           />
-       <Button 
-           android:id="@+id/refresh_weather"
-           android:layout_width="45dp"
-           android:layout_height="45dp"
-           android:layout_centerVertical="true"
-           android:layout_alignParentRight="true"
-           android:layout_marginRight="10dp"
-           android:background="@drawable/title_update"
-           />
+   <Button 
+       android:id="@+id/switch_city"
+       android:layout_width="45dp"
+       android:layout_height="45dp"
+       android:layout_centerVertical="true"
+       android:layout_marginLeft="10dp"
+       android:background="@drawable/title_city"
+       />
+   <TextView 
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_centerInParent="true"
+       android:id="@+id/city_name"
+       android:textColor="#fff"
+       android:textSize="24sp"
+       />
+   <Button 
+       android:id="@+id/refresh_weather"
+       android:layout_width="45dp"
+       android:layout_height="45dp"
+       android:layout_centerVertical="true"
+       android:layout_alignParentRight="true"
+       android:layout_marginRight="10dp"
+       android:background="@drawable/title_update"
+       />
    </RelativeLayout>
+   
 	<RelativeLayout 
 	   android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/l_weather"
 	    >
+       
+    <LinearLayout
+	android:id="@+id/miniAdLinearLayout"
+	android:orientation="horizontal"
+	android:layout_width="match_parent"
+	android:layout_height="wrap_content"
+	android:gravity="center_horizontal"/>
+    
 	    <TextView 
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:id="@+id/publish_text"
 	        android:layout_marginRight="10dp"
-	        android:layout_marginTop="10dp"
+	        android:layout_marginTop="20dp"
 	        android:layout_alignParentRight="true"
 	        android:textColor="#fff"
 	        android:textSize="15sp"
@@ -57,6 +66,7 @@
 	    <LinearLayout 
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
+	        android:layout_below="@+id/publish_text"
 	        android:id="@+id/weather_info_layout"
 	        android:layout_centerInParent="true"
 	        android:orientation="vertical"
@@ -152,7 +162,22 @@
 	            android:textColor="#fff"
 	            android:textSize="15sp"/>
 	            </LinearLayout>
-	            
+	    		<LinearLayout 
+	            android:layout_width="wrap_content"
+	            android:layout_height="40dp"
+	            android:layout_gravity="center_horizontal"
+	            android:orientation="horizontal"
+	            >
+	            <TextView 
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/huadong"
+                android:layout_gravity="center_vertical"
+	            android:textColor="#fff"
+	            android:textSize="15sp"
+                android:text="@string/huadong"
+                />
+	            </LinearLayout>
 	    </LinearLayout>
 	</RelativeLayout>
 	
@@ -171,13 +196,12 @@
             android:paddingRight="10dip"
             />
     </RelativeLayout>
-    
-	  <LinearLayout
-    android:id="@+id/ll_banner"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:gravity="center_horizontal">
-	</LinearLayout>
-	
+  
+	<LinearLayout 
+	android:id="@+id/AdLinearLayout"
+	android:orientation="horizontal"
+	android:layout_width="match_parent"
+	android:layout_height="50dp"
+	android:gravity="center_horizontal"/>
+   
 </LinearLayout>
